# acestep.cpp

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  ace-qwen3.cpp  ace-qwen3.cu  backend.h  bpe.h  build.sh  buildcpu.sh  buildcuda.cmd  checkpoints.sh  compare.cpp  cond.h  convert.py  debug.h  dit-only-sft.sh  dit-only.sh  dit-vae.cpp  dit-vae.cu  dit.cuh  dit.h  format.sh  full-sft.sh  full.sh  generate.sh  gguf_weights.h  kernels.cuh  main.cu  partial.sh  pipeline.cu  prompt.json  pt2bin.cpp  quantize.cpp  quantize.sh  qwen3-lm.h  qwen3.h  request.cpp  request.h  (+16 more)
.github/workflows/: ci-build.yml  release.yml  scoring-drift-check.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-mp3-bitrate-control/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-REVIEW.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
cuda/: Makefile  ace-qwen3.cu  build.sh  condition.cuh  dit-only.sh  dit-vae.cu  dit.cuh  format.sh  full.sh  generate.sh  partial.sh  safetensors.h  simple.sh  test-bpe.cpp  vae.cuh
docs/: ARCHITECTURE.md  architecture.md  debug-comparison.md  prompt-pipeline.md
examples/: ace-understand.sh  all.sh  cover.json  cover.sh  dit-only-sft.json  dit-only-sft.sh  dit-only.json  dit-only.sh  full-sft.json  full-sft.sh  full.json  full.sh  lego.json  lego.sh  partial-sft.json  partial-sft.sh  partial.json  partial.sh  server.sh  simple-batch.sh  simple-sft.json  simple-sft.sh  simple.cmd  simple.json  simple.sh
scripts/: test_3way.py  test_lm_logits.py
scripts/ACE-Step-1.5/acestep/: handler.py
src/: audio-io.h  audio.h  backend.h  debug.h  dit-graph.h  dit-sampler.h  dit.h  dtw-score.h  gguf-weights.h  lora-merge.h  lyric-timing.h  metadata-fsm.h  model-store.cpp  model-store.h  pipeline-lm.cpp  pipeline-lm.h  pipeline-synth-impl.h  pipeline-synth-ops.cpp  pipeline-synth-ops.h  pipeline-synth.cpp  pipeline-synth.h  pipeline-understand.cpp  pipeline-understand.h  prompt.h  qwen3-enc.h  qwen3-lm.h  request.cpp  request.h  safetensors.h  vae.h  wav.h
tests/: CMakeLists.txt  Makefile  debug-cos-sim.py  debug-detok-cossim.py  debug-dit-cossim.py  debug-dit-cossim.sh  debug-lm-logits.py  debug-lm-logits.sh  request0.json  test-dtw-score.cpp  test-model-store.cpp  test-model-store.sh  test-philox.cpp
tools/: ace-lm.cpp  ace-qwen3.cpp  ace-server.cpp  ace-synth.cpp  ace-understand.cpp  dit-vae.cpp  mp3-codec.cpp  neural-codec.cpp  quantize.cpp  synth-batch-runner.h
tools/webui/: index.html  package-lock.json  package.json  vite.config.ts
tools/webui/src/: App.svelte
tools/webui/src/components/: LogCard.svelte  RequestForm.svelte  SongCard.svelte  SongList.svelte  Toast.svelte  Waveform.svelte
tools/webui/src/lib/: api.ts  config.ts  db.ts  fields.ts  state.svelte.ts  types.ts
